--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bottom_bar: ^2.0.3
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
   flutter:
@@ -35,6 +36,8 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_onboarding_slider: ^1.0.11
   flutter_screenutil: ^5.9.3
+  google_nav_bar: ^5.0.7
+  image_picker: ^1.1.2
   pretty_dio_logger: ^1.4.0
   shared_preferences: ^2.3.3
   supabase_flutter: ^2.8.1
